# kalantha

./: .gitignore  CMakeLists.txt  README.md
CMake/: Arch.cmake  ClangSanitizers.cmake  Common.cmake  Platform.cmake
Kalantha/: CMakeLists.txt
Kalantha/Allocators/: AllocatorBase.hpp  BumpAllocator.hpp  CMakeLists.txt
Kalantha/Arch/: CMakeLists.txt
Kalantha/Arch/Generic/: Endian.hpp  WhichArch.hpp
Kalantha/Arch/x86_64/: CPUID.hpp
Kalantha/Core/: Algorithm.hpp  Array.hpp  Assertions.hpp  Atomic.hpp  CMakeLists.txt  CharConv.hpp  ClassTraits.hpp  Common.hpp  DummyTypes.hpp  Errors.hpp  IntegerSequence.hpp  Iterator.hpp  Limits.hpp  Memory.hpp  None.hpp  OStream.hpp  Option.hpp  Platform.hpp  Result.hpp  Span.hpp  StringView.hpp  Try.hpp  Tuple.hpp  Types.hpp  Utility.hpp
Kalantha/Meta/: CMakeLists.txt  Concepts.hpp  TypeTraits.hpp
Tests/: CMakeLists.txt  Entry.cpp
Tests/Allocators/: CMakeLists.txt  TestBumpAllocator.cpp
Tests/Arch/: CMakeLists.txt
Tests/Arch/Generic/: TestEndian.cpp
Tests/Arch/x86_64/: TestCPUID.cpp
Tests/Core/: CMakeLists.txt  TestAlgorithm.cpp  TestArray.cpp  TestAtomic.cpp  TestCharConv.cpp  TestLimits.cpp  TestMemory.cpp  TestOStream.cpp  TestOption.cpp  TestResult.cpp  TestSpan.cpp  TestStringView.cpp  TestTuple.cpp
